welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:2: error: Unit does not take parameters
  for (colone <- 1 to 3) {faireMotif() ; reposition()};}
                                    ^